<resources>
    <string name="app_name">FoodDelivery_MerchantApp</string>
    <string name="hello">Xin chào</string>
    <string name="highlands_coffee">Highlands Coffee</string>
    <string name="store">Cửa hàng</string>
    <string name="order">Đơn hàng</string>
    <string name="setting">Cài đặt</string>
    <string name="statistic">Thống kê</string>
    <string name="list_product">Danh sách các món</string>
    <string name="add_product">Thêm món mới</string>
    <string name="delete_product">Xóa món</string>
    <string name="product_name">Tên món (VN)</string>
    <string name="product_name_en">Tên món (ENG)</string>
    <string name="product_description">Mô tả</string>
    <string name="product_size">Size: Ví dụ S, M, L</string>
    <string name="product_price">Giá (VNĐ): Ví dụ 39000, 49000, 59000</string>
    <string name="finish_title">HOÀN TẤT</string>
    <string name="product_list">DANH SÁCH MÓN</string>
    <string name="price">\"Giá: \"</string>
    <string name="vnd">VNĐ</string>
    <string name="vnd_with_appro">\"VNĐ ~ \"</string>
    <string name="search_for">Tìm kiếm...</string>
    <string name="pls_enter_product_name">Vui lòng nhập tên món</string>
    <string name="pls_enter_product_size">Vui lòng điền size của món, tối thiểu 1</string>
    <string name="login_account">ĐĂNG NHẬP</string>
    <string name="login">ĐĂNG NHẬP</string>
    <string name="login_">Đăng nhập</string>
    <string name="email">Email</string>
    <string name="password">Mật khẩu</string>
    <string name="pls_enter_email">Vui lòng điền email</string>
    <string name="wrong_email_format">Sai định dạng email</string>
    <string name="please_enter_pass">Vui lòng điền mật khẩu</string>
    <string name="email_pass_not_correct">Email hoặc mật khẩu không đúng!</string>
    <string name="pls_enter_product_price">Vui lòng nhập size của món, tối thiểu 1</string>
    <string name="size_eqal_price">Số lượng size và số lượng giá phải trùng nhau</string>
    <string name="kind">Phân loại</string>
    <string name="food">Thức ăn</string>
    <string name="choose_more">Thêm hình ảnh</string>
    <string name="updating_info">Đang cập nhật thông tin…</string>
    <string name="pls_choose_main_image">Vui lòng chọn 1 ảnh chính trước</string>
    <string name="update_success">Cập nhật sản phẩm thành công!</string>
    <string name="loading">Đang tải...</string>
    <string name="adding_info">Đang thêm thông tin món</string>
    <string name="update_question">CẬP NHẬT THÔNG TIN?</string>
    <string name="update_details">Bạn có muốn thay đổi thông tin?\nThông tin sau khi thay đổi sẽ không thể hoàn tác</string>
    <string name="delete_title">XÓA THÔNG TIN MÓN</string>
    <string name="delete_details">Bạn có muốn xóa món khỏi danh sách của bạn?\nMón sau khi xóa sẽ không thể hoàn tác</string>
    <string name="pending_order">Đơn hàng đang chờ</string>
    <string name="confirmed_order">Đơn hàng đã nhận</string>
    <string name="delivering_order">Đơn hàng đang giao</string>
    <string name="order_history">Lịch sử đơn hàng</string>
    <string name="no_data">Không có dữ liệu mới!</string>
    <string name="detail">Chi tiết</string>
    <string name="items">sản phẩm</string>
    <string name="customer_label">Khách hàng:</string>
    <string name="phone_number_label">Số điện thoại:</string>
    <string name="address_label">Địa chỉ:</string>
    <string name="expect_time_label">Giao vào:</string>
    <string name="order_detail">Chi tiết đơn hàng</string>
    <string name="subtotal_label">Tạm tính</string>
    <string name="discount_label">Giảm giá</string>
    <string name="total_label">Tổng cộng</string>
    <string name="shipping_cost_label">Phí vận chuyển</string>
    <string name="confirm_order">Nhận đơn</string>
    <string name="deliver_order">Giao hàng</string>
    <string name="order_success">Thành công</string>
    <string name="moved_order_next_state">Thay đổi trạng thái đơn hàng thành công!</string>
    <string name="login_in">Đang đăng nhập…</string>
    <string name="loading_data">Đang tải dữ liệu…</string>
    <string name="account_invalid">Tài khoản không hợp lệ!</string>
    <string name="logout">Đăng xuất</string>
    <string name="cancel_order">Hủy/ Thất bại</string>
    <string-array name="type">
        <item>Thức uống</item>
        <item>Thức ăn</item>
    </string-array>
</resources>