<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:id="@+id/cardview_order"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="15dp"
    app:cardCornerRadius="15dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@drawable/background_2">

        <TextView
            android:id="@+id/tv_user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_total_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/finish_title"
            android:textColor="@color/light_red"
            android:textSize="17sp"
            android:layout_marginTop="5dp"
            android:layout_alignParentEnd="true"/>

        <TextView
            android:id="@+id/tv_user_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="italic"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/tv_user_name"/>

        <TextView
            android:id="@+id/tv_total_items"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/food"
            android:textColor="@color/primaryTextColor"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/tv_user_phone"/>

        <TextView
            android:id="@+id/tv_order_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/tv_total_items"/>

        <TextView
            android:id="@+id/tv_order_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail"
            android:textColor="@color/primaryTextColor"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/tv_total_items"
            android:layout_alignParentEnd="true"/>

        <TextView
            android:id="@+id/tv_order_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/detail"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/tv_order_time"/>
    </RelativeLayout>
</androidx.cardview.widget.CardView>