<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryColor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <RelativeLayout
            android:id="@+id/pending_order_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/background_2">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/pending_order_80px" />

            <TextView
                android:id="@+id/tv_pending"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/pending_order"
                android:textColor="@color/primaryTextColor"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_pending_quantity"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:text="2"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textAlignment="center"
                android:layout_marginEnd="20dp"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:backgroundTint="@color/light_red"
                android:background="@drawable/background_2"
                android:visibility="visible"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/confirmed_order_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/background_2">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/confirmed_order_80px" />

            <TextView
                android:id="@+id/tv_confirmed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/confirmed_order"
                android:textColor="@color/primaryTextColor"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_confirmed_quantity"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:text="2"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textAlignment="center"
                android:layout_marginEnd="20dp"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:backgroundTint="@color/light_red"
                android:background="@drawable/background_2"
                android:visibility="visible"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/delivering_order_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/background_2">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/delivering_order_80px" />

            <TextView
                android:id="@+id/tv_delivering"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/delivering_order"
                android:textColor="@color/primaryTextColor"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_delivering_quantity"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:text="2"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textAlignment="center"
                android:layout_marginEnd="20dp"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:backgroundTint="@color/light_red"
                android:background="@drawable/background_2"
                android:visibility="visible"/>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/succeeded_order_section"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:background="@drawable/background_2">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/succeeded_order_80px" />

            <TextView
                android:id="@+id/tv_succeeded"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/order_history"
                android:textColor="@color/primaryTextColor"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_succeeded_quantity"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:text="2"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textAlignment="center"
                android:layout_marginEnd="20dp"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"
                android:backgroundTint="@color/light_red"
                android:background="@drawable/background_2"
                android:visibility="visible"/>
        </RelativeLayout>
    </LinearLayout>
</RelativeLayout>